Scroll through questions
To make it usable with an input box, all I have to do is make an input box, and replace the *Next* button with a *Submit*

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+
+
+    <div id="question"></div>
+    <div id="question_num"></div>
+
+
+    <button onclick="backQuestion()">Back</button>
+    <button onclick="nextQuestion()">Next</button>
+    <button onclick="newList()">New List</button>
+
+    <script src="main.js"></script>
 </body>
 </html>
