Added screen input
Instead of alert and input boxes, the question inputs are now on the screen.

Asks each question, tells you if right or wrong, and gives you percentage at the end.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 
+    <div id="question_elements">
+        <div id="question"></div>
+        <div id="question_num"></div>
 
-    <div id="question"></div>
-    <div id="question_num"></div>
+        <br>
 
+        <input type="text" id="input_box"><br><br>
+        <button onclick="submitAnswer()" id="submit_button">Submit</button> 
+    
+        <script src="main.js"></script>
+    </div>
 
-    <button onclick="backQuestion()">Back</button>
-    <button onclick="nextQuestion()">Next</button>
-    <button onclick="newList()">New List</button>
-
-    <script src="main.js"></script>
 </body>
 </html>
