--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
 
-    <div id="question_elements">
-        <div id="question"></div>
-        <div id="question_num"></div>
+<div id="question_elements">
+    <div id="question"></div>
+    <div id="question_num"></div>
 
-        <br>
+    <br>
 
-        <input type="text" id="input_box"><br><br>
-        <button onclick="submitAnswer()" id="submit_button">Submit</button> 
-    
-        <script src="main.js"></script>
-    </div>
+    <label for="input_box"></label>
+    <input type="text" id="input_box"><br><br>
+
+    <button onclick="submitAnswer()" id="submit_button">Sumbit</button>
+
+    <script src="main.js"></script>
+</div>
 
 </body>
 </html>
